css/obBase.css
/* ... */
.txtAreaField:focus {
  outline: 1px solid #565656;
}

input[type="text"].fieldItem.fieldItem-withButton,
input[type="email"].fieldItem.fieldItem-withButton,
input[type="url"].fieldItem.fieldItem-withButton,
input[type="number"].fieldItem.fieldItem-withButton {
  position: absolute;
  padding-left: 50px;
}

.numberSpinnerUp,
.numberSpinnerDown {
  cursor: pointer;
  width: 18px;
  position: absolute;
  right: 0;
  box-sizing: border-box;
  font-family: "Ionicons";
  color: #fff;
  font-size: 14px;
  text-align: center;
  line-height: 20px;
  background-color: rgba(140,140,140,0.2);
  margin: 4px;
}

.numberSpinnerUp {
  top: 0;
}

.numberSpinnerUp:before {
  content: "\f10d";
}

.numberSpinnerDown {
  bottom: 0;
}

.numberSpinnerDown:before {
  content: "\f104";
}

.fieldItem .btn {
  margin-top: 9px;
}

.fieldItem .fieldItem-selectWrapper {
  position: absolute;
  width: 100%;
}

.fieldItem .fieldItem-selectWrapper select {
  width: 100%;
  height: 50px;
  line-height: 50px;
  margin: 0;
  background: none;
  border: 1px solid transparent;
  outline: none;
  box-sizing: border-box;
  -webkit-appearance: none;
  color: #fff;
}

.fieldItem .fieldItem-selectWrapper select:focus {
  outline: none;
}

.fieldItem .fieldItem-selectWrapper select[multiple] {
  height: 150px;
}

.fieldItem .fieldItem-selectWrapper select[multiple]:focus {
  height: 500px;
}

.fieldItem .fieldItem-selectWrapper:after {
  content: "\f104";
  font-family: "Ionicons";
  position: absolute;
  line-height: 50px;
  top: 0;
  right: 20px;
  pointer-events: none;
}

.fieldItem .fieldItem-selectWrapper.noIcon:after {
  content: "";
}

/* custom chosen styles */
.fieldItem .fieldItem-selectWrapper .chosen-single {
  height: 50px;
  background: none;
  border: none;
  border-radius: 0;
  box-shadow: none;
  line-height: 50px;
  color: #fff;
  opacity: 1;
}

.fieldItem .fieldItem-selectWrapper .chosen-container-single div b,
.fieldItem .fieldItem-selectWrapper .chosen-container-single span b {
  background: none;
  height: 0;
}

.fieldItem .fieldItem-selectWrapper .chosen-container-single div b:after {
  content: "\f104";
  font-family: "Ionicons";
  position: absolute;
  line-height: 50px;
  top: 0;
  right: 20px;
  pointer-events: none;
}

.fieldItem .fieldItem-selectWrapper .chosen-container-single.chosen-container-active div b:after {
  content: "\f10d";
}

.fieldItem .fieldItem-selectWrapper .chosen-drop {
  background: #353535;
  border: 1px solid rgba(255,255,255,0.08);
  border-radius: 0;
  box-shadow: none;
  line-height: 50px;
  color: #fff;
}

.fieldItem .fieldItem-selectWrapper.chosen-relative .chosen-with-drop .chosen-drop {
  position: relative;
}

.fieldItem .fieldItem-selectWrapper .chosen-drop .chosen-results li {
  color: #fff;
}

.fieldItem .fieldItem-selectWrapper .chosen-drop .chosen-results li.highlighted {
  background: rgb(87,87,87);
}

.chosen-container-single .chosen-single span {
  padding-left: 10px;
  font-size: 14px;
  font-weight: 400;
}

.chosen-container .chosen-results {
  padding: 0;
}

.chosen-container-multi .chosen-choices {
  background: none;
}

.fieldItem-textarea {
  padding: 15px;
  border: 2px solid transparent;
  color: #fff;
  overflow: auto; /* use customThemeScrollbar to add a scrolbar */
  word-break: break-word; /* prevent urls from making the text area grow */
}

.fieldItem-textarea:focus {
  border: 2px solid #fff;
  transition: border 0.3s;
  outline: none;
}

select {
  border: 2px solid transparent;
  border-radius: 0;
  font-family: "Helvetica Neue", Helvetica, "Open Sans", sans-serif;
  padding: 0 15px;
  -webkit-appearance: none;
}

select:focus {
  border: 2px solid #fff;
}

input[type="radio"].fieldItem {
  display: none;
}

input[type="radio"].fieldItem + label {
  display: inline-block;
  cursor: pointer;
  position: relative;
  padding: 0 20px 0 40px;
}

input[type="radio"].fieldItem + label:before {
  content: "";
  display: inline-block;
  position: absolute;
  left: 10px;
  height: 16px;
  width: 16px;
  border-radius: 12px;
  border: solid 1px #fff;
  box-shadow: none;
  opacity: 1;
  transform: translateY(-50%) translateZ(0);
  -webkit-backface-visibility: hidden;
  top: 50%;
}

input[type="radio"].fieldItem:checked + label:before {
  background: #fff;
  box-shadow: inset 0 0 0 4px #086A9E;
}

.theme-container input[type="radio"].fieldItem + label {
  padding: 0;
  position: relative;
  height: 100%;
  width: 100%;
  opacity: 1;
}

.theme-container input[type="radio"].fieldItem + label:before {
  position: absolute;
  height: 16px;
  width: 16px;
  top: 120px;
  left: 50%;
  margin-left: -8px;
  border-radius: 12px;
  border: solid 1px #fff;
  box-shadow: none;
  opacity: 1;
}

.theme-container input[type="radio"].fieldItem:checked + label:before {
  background: #fff;
  box-shadow: inset 0 0 0 4px #086A9E;
}

input[type="radio"].fieldItem.starRating + label {
  padding: 0 12px;
}

input[type="radio"].fieldItem.starRating + label:before {
  content: "\f2fc";
  font-family: "Ionicons";
  color: #fff;
  line-height: 24px;
  font-size: 18px;
  text-align: center;
  height: 24px;
  width: 24px;
  border-radius: 50%;
  border: none;
  background: none;
  box-shadow: none;
  opacity: 1;
  transform: translateY(-50%) translateZ(0);
  -webkit-backface-visibility: hidden;
  top: 50%;
  left: 0;
}

input[type="radio"].fieldItem.starRating:checked + label:before {
  content: "\f2fc";
  background: #000;
  box-shadow: none;
}

input[type="radio"].fieldItem.starRating:checked + label + input + label:before {
  content: "\f3ae";
}

input[type="radio"].fieldItem.starRating:checked + label + input + label + input + label:before {
  content: "\f3ae";
}

input[type="radio"].fieldItem.starRating:checked + label + input + label + input + label + input + label:before {
  content: "\f3ae";
}

input[type="radio"].fieldItem.starRating:checked + label + input + label + input + label + input + label + input + label:before {
  content: "\f3ae";
}
/* ... */

